--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,8 @@
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <!-- O caminho foi corrigido para apontar para src/index.js -->
+    <script type="module" src="/src/index.js"></script>
   </body>
 </html>
+
