--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div id="root"></div>
     <!-- O caminho foi corrigido para apontar para src/index.js -->
-    <script type="module" src="/src/index.js"></script>
+    <script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
 
