--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Flashcard App</title>
-  </head>
-  <body>
+</head>
+<body>
     <div id="root"></div>
-    <!-- O caminho foi corrigido para apontar para src/index.js -->
     <script type="module" src="/src/index.jsx"></script>
-  </body>
+</body>
 </html>
 
